몬스터에 서버 정보 추가

--- a/src/main/resources/templates/main.hbs
+++ b/src/main/resources/templates/main.hbs
@@ -59,7 +59,7 @@
         <tbody id="tbody">
             {{#monsters}}
                 <tr class="monsterGenTime" id="{{id}}">
-                    <td style="width:150px;">{{name}}   {{#if mobType}} <span class="badge badge-pill badge-dark">불완전</span>{{/if}}  {{#if channel}} <span class="badge badge-warning">{{channel}}채널</span>{{/if}}</td>
+                <td style="width:150px;">{{name}}   {{#if mobType}} <span class="badge badge-pill badge-dark">불완전</span>{{/if}}  {{#if channel}} <span class="badge badge-warning">{{channel}}채널</span>{{/if}}{{#if serverNo}}<span class="badge badge-warning">{{serverNo}}서버</span>{{/if}}</td>
                     <td style="width:150px;">{{location}}</td>
                     <td class="genTime" style="width:150px;">{{genTimeStr}}<p class="text-success" style="font-size: 10px;" name="nextMobGen"></p></td>
                     <td class="remainTime" style="width:200px;"></td>
